bao-loc/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # This annotation indicates the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: demo-bao-loc
  namespace: demo-bao-loc
spec:
  tls:
    - hosts:
        - bao-loc.demo.c4-soft.com
      secretName: bao-loc-tls
  rules:
  - host: bao-loc.demo.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bao-loc-gateway
            port:
              number: 8080
